# F1sim

./: .gitignore  CMakeLists.txt  INFO.md  README.md  ROADMAP.md  dokumentacja.tex  f1_sim  gemini.md  prezentacja.tex
config/: config.txt  monaco_track.txt  oval_track.txt  silverstone_track.txt
include/: Agent.h  Car.h  ConfigParser.h  DataStructures.h  Driver.h  Race.h  Strategy.h  Team.h  Tire.h  Track.h  Vector2D.h  Weather.h
src/: Agent.cpp  Car.cpp  ConfigParser.cpp  Driver.cpp  Race.cpp  Strategy.cpp  Team.cpp  Tire.cpp  Track.cpp  Weather.cpp  main.cpp
